Upgrade phphinder v0.1.5-beta

--- a/src/Resources/config/phphinder.yaml
+++ b/src/Resources/config/phphinder.yaml
@@ -1,5 +1,5 @@
 parameters:
-    phphinder.storage: 'json' # 'dbal', 'json'
+    phphinder.storage: 'json' # 'dbal', 'json', 'redis'
     phphinder.name: 'var'
     phphinder.auto_sync: true
 services:
